tests/tests/ui/nested_option_deferred.stderr
error[E0277]: `Option<bool>` cannot be the inner type of a nullable Toasty field
  --> tests/ui/nested_option_deferred.rs:13:5
   |
13 |     flag: toasty::Deferred<Option<Option<bool>>>,
   |     ^^^^ `Option<Option<bool>>` is not a supported field type
   |
   = help: the trait `Present` is not implemented for `Option<bool>`
   = note: a Toasty field can be nullable at most once; a column has one NULL value, so the two `Option` layers of `Option<Option<_>>` collapse onto it and `Some(None)` reads back as `None`
   = note: for an optional value inside an optional, wrap the inner value in `toasty::Json<_>`, which encodes `null` itself
help: the trait `toasty::schema::Field` is implemented for `Option<T>`
  --> $WORKSPACE/crates/toasty/src/schema/field.rs
   |
   | impl<T: Field + Present> Field for Option<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: required for `Option<Option<bool>>` to implement `toasty::schema::Field`

error[E0277]: `Option<bool>` cannot be the inner type of a nullable Toasty field
  --> tests/ui/nested_option_deferred.rs:13:11
   |
13 |     flag: toasty::Deferred<Option<Option<bool>>>,
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Option<Option<bool>>` is not a supported field type
   |
   = help: the trait `Present` is not implemented for `Option<bool>`
   = note: a Toasty field can be nullable at most once; a column has one NULL value, so the two `Option` layers of `Option<Option<_>>` collapse onto it and `Some(None)` reads back as `None`
   = note: for an optional value inside an optional, wrap the inner value in `toasty::Json<_>`, which encodes `null` itself
help: the trait `toasty::schema::Field` is implemented for `Deferred<T>`
  --> $WORKSPACE/crates/toasty/src/schema/deferred.rs
   |
   | impl<T: Field<Output = T>> Field for Deferred<T> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: required for `Option<Option<bool>>` to implement `toasty::schema::Field`
   = note: 1 redundant requirement hidden
   = note: required for `Deferred<Option<Option<bool>>>` to implement `toasty::schema::Field`
